--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
 </head>
 
 <body>
-    <div class="container-md">
+    <div class="container">
 
         <!-- Intro -->
-        <section class="px-5 pt-5">
+        <section class="px-md-5  pt-5">
             <div class="row justify-content-between">
-                <div class="col-4">
+                <div class="col-md-4 col">
                     <h3>Aashish Aggarwal</h3>
                 </div>
-                <div class="col-5">
+                <div class="col-md-5 col">
                     <p class="text-right">Email : aggarwalaashish.iitd@gmail.com</p>
                     <p class="text-right">Mobile : +91 7889251396</p>
                 </div>
@@ -130,7 +130,7 @@
                             <p>Artificial Intelligence</p>
                         </div>
                         <div class="col">
-                            <p class="lFont"> Machine Learning [Supervised Learning(Linear Regression, Logistic Regression, Neural Networks, SVM) , Unsupervised Learning(Clustering Algorithm)], AI for Everyone (Coursera Provided By Stanford University)</p>
+                            <p class="lFont"> Machine Learning [Supervised Learning(Linear Regression, Logistic Regression, Neural Networks, SVM, Decision Trees, Random Forest) , Unsupervised Learning(Clustering Algorithm, PCA, KNN)], AI for Everyone (Coursera Provided By Stanford University)</p>
                         </div>
                     </div>
 
@@ -186,6 +186,45 @@
 
 
         <!-- Skills -->
+        
+
+
+        <!-- Projects -->
+        <section class="px-5">
+            <h4>Projects</h4>
+            <hr class="hr">
+            <ul>
+                <li>
+                    <p style="display: inline;">Image Compression Using K-Means Clustering</p>
+                    <p class="lFont">Built a machine learning model to compress the image using K-Means clustering which is an Unsupervised learning algorithm</p>
+                </li>
+                <li>
+                    <p style="display: inline;">Sentiment Analysis</p>
+                    <p class="lFont">Developed a machine learning model to detect sentiments and opinions that may be positive or negetive by analyzing words </p>
+                </li>
+                <li>
+                    <p style="display: inline;">Breast Cancer Predictor</p>
+                    <p class="lFont">Built Machine learning model for predicting breast cancer using multi linear
+                        regression technique.</p>
+                </li>
+                <li>
+                    <p style="display: inline;">Data Structures and Algorithms</p>
+                    <p class="lFont">Implemented various data structure and algorithms like [BST, Linked List, Queues,
+                        AVL Trees, Graph], [ Dijkstra, Bellman Ford, Hashing, Counting Sort, Radix Sort, BFS, DFS,
+                        Dynamic Programming]</p>
+                </li>
+                <li>
+                    <p style="display: inline;">Numerical Methods</p>
+                    <p class="lFont">Developed C programs to solve Algebraic eq. Differential Eq. Integration, Differentiation, etc. using various methods like runge-kutta, Collocation, Shooting etc.</p>
+                </li>
+                <li>
+                    <p style="display: inline;">Web Development Project</p>
+                    <p class="lFont">Developed a website for a Delhi Based NGO which Includes use of various frontend and backend technologies </p>
+                </li>
+            </ul>
+
+        </section>
+
         <section class="px-5">
             <h4>Skills</h4>
             <hr class="hr">
@@ -231,39 +270,20 @@
                         </div>
                     </div>
                 </li>
-            </ul>
-
-        </section>
-
-
-
-        <!-- Projects -->
-        <section class="px-5">
-            <h4>Projects</h4>
-            <hr class="hr">
-            <ul>
                 <li>
-                    <p style="display: inline;">Breast Cancer Predictor</p>
-                    <p class="lFont">Built Machine learning model for predicting breast cancer using multi linear
-                        regression technique.</p>
-                </li>
-                <li>
-                    <p style="display: inline;">3D wave Animation using THREE JS</p>
-                    <p class="lFont">Coded a Ranging sea animation using a library called Three JS</p>
-                </li>
-                <li>
-                    <p style="display: inline;">Data Structures and Algorithms</p>
-                    <p class="lFont">Implemented various data structure and algorithms like [BST, Linked List, Queues,
-                        AVL Trees, Graph], [ Dijkstra, Bellman Ford, Hashing, Counting Sort, Radix Sort, BFS, DFS,
-                        Dynamic Programming]</p>
-                </li>
-                <li>
-                    <p style="display: inline;">3D wave Animation using THREE JS</p>
-                    <p class="lFont">Coded a Ranging sea animation using a library called Three JS</p>
+                    <div class="row">
+                        <div class="col-3">
+                            <p>Soft Skills</p>
+                        </div>
+                        <div class="col lFont">
+                            Time management, Problem-solving, Creativity, Team Work
+                        </div>
+                    </div>
                 </li>
             </ul>
 
         </section>
+
 
         <!-- Extra Curricular Activities -->
         <section class="px-5">
