Add warning section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <body>
     <div class="container">
 
-        <section style="background-color: rgb(254, 224, 222);">
+        <section style="background-color: rgb(254, 224, 222);" id="warning">
             <h4  class="text-center py-3">
                 Please Open This Resume in desktop mode
             </h4>
@@ -354,6 +354,14 @@
 
 
     </div>
+
+    <script>
+        var x = window.screen.width
+        console.log(x)
+        if (x > 800){
+            document.getElementById("warning").style.display = "None"
+        }
+    </script>
 
 
 
