--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
         <!-- Intro -->
         <section class="px-5 pt-5">
             <div class="row justify-content-between">
-                <div class="col-4">
+                <div class="col-md-4 col-6">
                     <h3>Aashish Aggarwal</h3>
                 </div>
-                <div class="col-5">
+                <div class="col-md-5 col-6">
                     <p class="text-right">Email : aggarwalaashish.iitd@gmail.com</p>
                     <p class="text-right">Mobile : +91 7889251396</p>
                 </div>
@@ -65,11 +65,11 @@
             <ul>
                 <li>
                     <div class="row justify-content-between">
-                        <div class="col-5">
+                        <div class="col-md-5 col-6">
                             
                             <p>Indian Institute of Technology Delhi, Delhi, India</p>
                         </div>
-                        <div class="col-2">
+                        <div class="col-md-2 col-4">
                             <p>(2020 - 2025)</p>
                         </div>
                     </div>
@@ -88,7 +88,7 @@
             <ul>
                 <li>
                     <div class="row">
-                        <div class="col-3">
+                        <div class="col-md-3 col-4">
                             <p>JEE Mains 2020 </p>
                         </div>
                         <div class="col">
@@ -99,7 +99,7 @@
                 </li>
                 <li>
                     <div class="row">
-                        <div class="col-3">
+                        <div class="col-md-3 col-4">
                             <p>JEE Advanced 2020 </p>
                         </div>
                         <div class="col">
@@ -110,7 +110,7 @@
                 </li>
                 <li>
                     <div class="row">
-                        <div class="col-3">
+                        <div class="col-md-3 col-4">
                             <p>Graphite No Code Challenge</p>
                         </div>
                         <div class="col">
@@ -133,7 +133,7 @@
             <ul>
                 <li>
                     <div class="row">
-                        <div class="col-3">
+                        <div class="col-md-3 col-4">
                             <p>Computer Science</p>
                         </div>
                         <div class="col">
@@ -144,7 +144,7 @@
                 </li>
                 <li>
                     <div class="row">
-                        <div class="col-3">
+                        <div class="col-md-3 col-4">
                             <p>Artificial Intelligence</p>
                         </div>
                         <div class="col">
@@ -155,7 +155,7 @@
                 </li>
                 <li>
                     <div class="row">
-                        <div class="col-3">
+                        <div class="col-md-3 col-4">
                             <p>Mathematics</p>
                         </div>
                         <div class="col">
@@ -166,7 +166,7 @@
                 </li>
                 <li>
                     <div class="row">
-                        <div class="col-3">
+                        <div class="col-md-3 col-4">
                             <p>Chemical Engineering</p>
                         </div>
                         <div class="col">
@@ -177,7 +177,7 @@
                 </li>
                 <li>
                     <div class="row">
-                        <div class="col-3">
+                        <div class="col-md-3 col-4">
                             <p>Other</p>
                         </div>
                         <div class="col">
@@ -188,7 +188,7 @@
                 </li>
                 <li>
                     <div class="row">
-                        <div class="col-3">
+                        <div class="col-md-3 col-4">
                             <p>Programming languages</p>
                         </div>
                         <div class="col">
@@ -248,7 +248,7 @@
             <ul>
                 <li>
                     <div class="row">
-                        <div class="col-3">
+                        <div class="col-md-3 col-4">
                             <p>Web Development</p>
                         </div>
                         <div class="col lFont">
@@ -259,7 +259,7 @@
                 </li>
                 <li>
                     <div class="row">
-                        <div class="col-3">
+                        <div class="col-md-3 col-4">
                             <p>Softwares</p>
                         </div>
                         <div class="col lFont">
@@ -289,7 +289,7 @@
                 </li>
                 <li>
                     <div class="row">
-                        <div class="col-3">
+                        <div class="col-md-3 col-4">
                             <p>Data Science</p>
                         </div>
                         <div class="col lFont">
@@ -299,7 +299,7 @@
                 </li>
                 <li>
                     <div class="row">
-                        <div class="col-3">
+                        <div class="col-md-3 col-4">
                             <p>Soft Skills</p>
                         </div>
                         <div class="col lFont">
@@ -318,7 +318,7 @@
             <ul>
                 <li>
                     <div class="row">
-                        <div class="col-3">
+                        <div class="col-md-3 col-4">
                             <p>Volunteer OCS IITD</p>
                         </div>
                         <div class="col">
@@ -329,7 +329,7 @@
                 </li>
                 <li>
                     <div class="row">
-                        <div class="col-3">
+                        <div class="col-md-3 col-4">
                             <p>Team Head Tryst</p>
                         </div>
                         <div class="col">
@@ -340,7 +340,7 @@
                 </li>
                 <li>
                     <div class="row">
-                        <div class="col-3">
+                        <div class="col-md-3 col-4">
                             <p>Volunteer, Blood Connect</p>
                         </div>
                         <div class="col">
