--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         rel="stylesheet">
     <style>
         * {
-            font-family: 'Lexend', sans-serif;
+            /* font-family: 'Lexend', sans-serif; */
+            font-family: 'Times New Roman', Times, serif;
         }
 
         .lFont {
